import "libnutrition/proto/error.proto";

message GroupData
{
	optional string id = 1;	
	optional string name = 2;
}

message GroupLoadRequest
{
	optional bool omit = 1 [default = false];
	optional bool all = 2 [default = false];
	repeated string requestedIds = 3;
}

message GroupLoadResponse
{
	repeated GroupData groups = 1;
	optional Error error = 100;
}